           VERSION 3.2.1
------------------------------------

Bugfixes:
* Fixed incorrect encoding of URLs when using the 'url' attribute for rewrite rules.
* MultiPageMessagesSupport doesn't duplicate messages any more if using MyFaces.
* Fixed potential NullPointerExceptions on FacesContext access.
* Ignore query parameters that are not correctly encoded (#88)


------------------------------------
           VERSION 3.2.0
------------------------------------

Major Changes:
* PrettyFaces is now licensed under the Apache Software License v2.0 (http://www.apache.org/licenses/LICENSE-2.0.html)
* Added 'parentId' for Hierarchical Mappings in pretty-config.xml (#72)
* Can now be run in a pure servlet environment (without JSF and related JARs)

Features & Enhancements:
* Added 'onPostback' configuration parameter for query parameters (#24)
* Added code-completion support for Eclipse Helios
* Added 'pretty:location' client behavior 
* Added 'onPostback' configuration parameter for path parameters (#24)
* New method PrettyContext.sendError() to send custom HTTP status codes (#66)
* Added SPI hooks for ConfigurationProvider and ConfigurationPostProcessor
* New @URLMappings annotation to declare multiple mappings on a single class

Regression Impact:
* Changed some method signatures in PrettyContext
* PrettyFilter no longer wraps application exceptions in ServletException
* PrettyException no longer extends javax.faces.FacesException
* Began deprecation of <view-id>/view.jsp</view-id> in favor of <view-id value="/view.jsp" />
* com.ocpsoft.pretty.faces.el.BeanNameResolver SPI has moved to com.ocpsoft.pretty.faces.spi.ELBeanNameResolver
* URL-mapping order is now properly respected in pretty-config.xml (and other config sources.)
* Began deprecation of PrettyURLBuilder methods without the new 'encodeUrl' argument.

Bugfixes:
* Fixed compatibility with Java 1.5
* Fixed handling of non-ASCII characters in URLs
* Fixed EL method invocation in JSF 1.1 branch.