@@ -7,6 +7,7 @@ Bugfixes:
 * MultiPageMessagesSupport doesn't duplicate messages any more if using MyFaces.
 * Fixed potential NullPointerExceptions on FacesContext access.
 * Ignore query parameters that are not correctly encoded (#88)
+* Fixed BeanManager JNDI lookup for Weld 1.1.0 + Tomcat enviroments
 
 
 ------------------------------------
